--- a/lab2_rovinsharma.Rmd
+++ b/lab2_rovinsharma.Rmd
@@ -35,4 +35,14 @@ x / y
 Nucleotides <- c("A", "T", "C", "G")
 sort (Nucleotides)
 
-#References
+# REFERENCES
+@Misc{Chang2015,
+  Title                    = {shiny: Web Application Framework for R. R package version 0.12.1},
+
+  Author                   = {Chang, W. and Cheng, J. and Allaire, JJ. and Xie, Y. and McPherson, J. },
+  Year                     = {2015},
+
+  Type                     = {Computer Program},
+  Url                      = {http://CRAN.R-project.org/package=shiny}
+}
+
