--- a/index.Rmd
+++ b/index.Rmd
@@ -7,10 +7,11 @@ bibliography: data/references.bib
 ---
 This is Rovin's course repository HTML file.
 
-![](images/Teletubby.jpg)
+![:-)](images/Teletubby.jpg)
 
 ## Labs
 
 1. [Introduction to R and Reproducible Research](lab1_rovinsharma.html)
+2. [Github and RStudio](lab2_rovinsharma.html)
 
 
