--- a/lab3b_rovinsharma.Rmd
+++ b/lab3b_rovinsharma.Rmd
@@ -57,5 +57,96 @@ hindfoot <- surveys %>%
   filter(hindfoot_cm < 3) %>% 
   select(species_id, hindfoot_cm)
 ```
+*Split-apply-combine*
+```
+surveys %>%
+  group_by(sex) %>%
+  summarize(mean_weight = mean(weight, na.rm = TRUE))
 
+surveys %>%
+  filter(!is.na(weight)) %>%
+  group_by(sex, species_id) %>%
+  summarize(mean_weight = mean(weight))  
+```
+*Counting*
+```
+surveys %>%
+    count(sex) 
+
+surveys %>%
+    count(sex, sort = TRUE) 
+
+surveys %>%
+  count(sex, species) 
+```
+
+*Challenge 3*
+```
+surveys %>% 
+  count(plot_type)
+
+surveys %>% 
+  filter(!is.na(hindfoot_length)) %>% 
+  group_by(species_id) %>% 
+  summarize(mean_hindfoot_length = mean(hindfoot_length), min_hindfoot_length = min(hindfoot_length), max_hindfoot_length = max(hindfoot_length), n = n())
+
+surveys %>% 
+  filter(!is.na(weight)) %>% 
+  group_by(year) %>% 
+  filter(weight == max(weight)) %>% 
+  select(year, genus, species, weight)
+```
+*Spread and Gather*
+```
+surveys_gw <- surveys %>%
+  filter(!is.na(weight)) %>%
+  group_by(plot_id, genus) %>%
+  summarize(mean_weight = mean(weight))
+
+
+surveys_spread <- surveys_gw %>%
+  spread(key = genus, value = mean_weight)
+
+str(surveys_spread)
+
+surveys_gather <- surveys_spread %>%
+  gather(key = "genus", value = "mean_weight", -plot_id)
+
+str(surveys_gather)
+```
+
+*Challenge 4*
+```
+surveys_spread_genera <- surveys %>%
+  group_by(plot_id, year) %>%
+  summarize(n_genera = n_distinct(genus)) %>%
+  spread(year, n_genera)
   
+surveys_spread_genera %>%
+  gather("year", "n_genera", -plot_id)
+
+surveys_long <- surveys %>%
+  gather("measurement", "value", hindfoot_length, weight)
+
+surveys_long %>%
+  group_by(year, measurement, plot_type) %>%
+  summarize(mean_value = mean(value, na.rm=TRUE)) %>%
+  spread(measurement, mean_value)
+```
+
+*Exporting*
+```
+surveys_complete <- surveys %>%
+  filter(!is.na(weight),          
+         !is.na(hindfoot_length),
+         !is.na(sex))
+
+species_counts <- surveys_complete %>%
+    count(species_id) %>% 
+    filter(n >= 50)
+
+surveys_complete <- surveys_complete %>%
+  filter(species_id %in% species_counts$species_id)
+  
+write_csv(surveys_complete, path = "data/surveys_complete.csv")
+```
