--- a/index.Rmd
+++ b/index.Rmd
@@ -23,6 +23,9 @@ This contains links for Rovin's genomics labs.
    [Data Visualization with ggplot2 pt 2](lab4b_rovinsharma.html)
 5. [Data Wrangling and Graphing COVID-19 Reporting Data Pt 2](lab5_rovinsharma.html)
    
+   [Extra: Interactive Graphs and Animations](lab5x_rovinsharma.html)
+   
+   
    
     
 
