--- a/lab3a_rovinsharma.Rmd
+++ b/lab3a_rovinsharma.Rmd
@@ -7,22 +7,26 @@ output: html_document
 
 # Starting with the Data
 
-```
+```{r, message = FALSE, error = FALSE}
+library(tidyverse)
+
 download.file(url="https://ndownloader.figshare.com/files/2292169",
               destfile = "data/portal_data_joined.csv")
 
 surveys <- read_csv("data/portal_data_joined.csv")              
 ```
 
-*Challenge 1*
-```
+**Challenge 1**
+
+```{r}
  str(surveys)
 ``` 
 The class of object "surveys" is data.frame, it has 34786 rows and 13 columns.
 There are 48 species, but I am not sure how I could find that from the output of str.
 
-*Challenge 2*
-```
+**Challenge 2**
+
+```{r}
 surveys_200 <- surveys[200, ]
 
 surveys_last <- surveys[nrow(surveys), ]
@@ -32,8 +36,9 @@ surveys_middle <- surveys[nrow(surveys)/2, ]
 surveys[-(7:nrow(surveys)), ]
 ```
 
-*Factors*
-```
+**Factors**
+
+```{r}
 sex <- factor(c("male", "female", "female", "male"))
 
 levels(sex)
@@ -43,16 +48,18 @@ sex <- factor(sex, levels = c("male", "female"))
 sex
 ```
 
-*Converting Factors*
-```
+**Converting Factors**
+
+```{r}
 year_fct <- factor(c(1990, 1983, 1977, 1998, 1990))
 as.numeric(as.character(year_fct))
 as.numeric(levels(year_fct))[year_fct]
 year_fct
 ```
 
-*Renaming Factors*
-```
+**Renaming Factors**
+
+```{r}
 sex <- factor(surveys$sex)
 head(sex)
 levels(sex)
@@ -60,23 +67,27 @@ levels(sex)
 levels(sex)[1] <- "undetermined"
 ```
 
-*Challenge 3*
-```
+**Challenge 3**
+
+```{r}
 levels(sex)[2] <- "female"
 levels(sex)[3] <- "male"
 
 sex <- factor(sex, levels = c("female", "male", "undetermined"))
 plot(sex)
 ```
-*Challenge 4*
-```
+
+**Challenge 4**
+
+```{r}
 animal_data <- data.frame(
           animal = c("dog", "cat", "sea cucumber", "sea urchin"),
           feel = c("furry", "squishy", "leathery", "spiny"),
           weight = c(45, 8, 1.1, 0.8)
           )
 ```
-```
+
+```{r}
 country_climate <- data.frame(
        country = c("Canada", "Panama", "South Africa", "Australia"),
        climate = c("cold", "hot", "temperate", "hot/temperate"),
@@ -88,14 +99,15 @@ country_climate <- data.frame(
 The characters are treated as factors, but they would've been vectors with stringsAsFactors = FALSE. My code has the changes to reflect the right data type. The quotes in northern_hemisphere and temperature were removed, and the 1 in has_kangaroo was changed to TRUE.
 
 *Formatting Dates*
-```
+
+```{r}
+
 library("lubridate")
 
 my_date <- ymd("2015-01-01")
 
 my_date <- ymd(paste("2015", "1", "1", sep = "-")) 
 
-#applying to surveys
 
 paste(surveys$year, surveys$month, surveys$day, sep = "-")
 ymd(paste(surveys$year, surveys$month, surveys$day, sep = "-"))
