--- a/index.Rmd
+++ b/index.Rmd
@@ -25,6 +25,7 @@ This contains links for Rovin's genomics labs.
    
    [Extra: Interactive Graphs and Animations](lab5x_rovinsharma.html)
 6. [Data Maps and Interactive Graphs from the COVID-19 reporting data](lab6_rovinsharma.html)
-   
+7. [RNA-Seq workflow](lab7_rovinsharma.html)
+
     
 
