--- a/index.Rmd
+++ b/index.Rmd
@@ -31,5 +31,8 @@ This contains links for Rovin's genomics labs.
 9. [Regular Expressions](lab9_rovinsharma.html)
 10. [Population genomics based on high throughput sequencing](lab10_rovinsharma.html)
 11. [Microbiome Analysis using dada2 and phyloseq](lab11_rovinsharma.html)
+12.
+13. [RMarkdown Website](https://rovinsharma.github.io/rmd-website/index.html)
+
 
 
